Issue #170 wrap paragraph text in preview

--- a/css/paragraphs.css
+++ b/css/paragraphs.css
@@ -23,6 +23,9 @@ html.dialog-open {
     rgba(0,0,0,.03) 40px
   );
 }
+.field-widget-paragraphs-embed table .paragraphs-item {
+  white-space: normal;
+}
 
 /* Modal Admin styles. */
 
